--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App{
   display: flex;
-  flex-direction: column;
+ 
+}
+.main{
+ 
+  display: flex;
+  width: 300px;
+  margin: 2rem;
+  box-shadow: 1px 1px 3px black;
+  
+}
+
+.empty{
+  width: 0.3rem;
+  height:7rem;
+  margin-right: 1rem;
+  border-radius: 5px;
+}
+p{
+
+}
+.persent{
+display: flex;
+}
+
+.persentage{
+  width: 2rem;
+  height: 1rem;
+  background-color:#36b9cc;
+ 
+
+
+}
+.empty-persantage{
+  overflow: hidden;
+
+  width: 5rem;
+  height: 1rem;
+  margin: 1rem 1rem;
+  border-radius: 10px;
+  background-color:lightblue;
+}
+.cont{
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
+  width: 100%;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cont i{
+  color: #9e9e9e59;
 }
