--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
   display: flex;
  
 }
+:root{
+
+  --bg:#36b9cc ;
+}
+
 .main{
  
   display: flex;
@@ -18,7 +23,7 @@
   border-radius: 5px;
 }
 p{
-
+margin:0px;
 }
 .persent{
 display: flex;
@@ -27,7 +32,7 @@ display: flex;
 .persentage{
   width: 2rem;
   height: 1rem;
-  background-color:#36b9cc;
+  background-color:var(--bg);
  
 
 
@@ -37,9 +42,9 @@ display: flex;
 
   width: 5rem;
   height: 1rem;
-  margin: 1rem 1rem;
+  margin: 0.1rem 1rem;
   border-radius: 10px;
-  background-color:lightblue;
+  background-color:var(--bg);
 }
 .cont{
   display: flex;
@@ -49,4 +54,50 @@ display: flex;
 }
 .cont i{
   color: #9e9e9e59;
+}
+.chart{
+  display: flex;
+  justify-content: space-around;
+
+  width: 100%;
+}
+.chart1>canvas{
+  width: 550px !important;
+  height: 350px !important;
+  padding: 2rem 2rem;
+}
+.chart2>canvas{
+  padding: 2rem 2rem;
+  margin-top: 2rem;
+}
+.chart2{
+
+}
+.chart1,.chart2{
+  background-color: #ffffff;
+  box-shadow: 2px 2px 10px #cfc0c0;
+}
+.chart h2{
+  color: #5ea4ec;
+  background-color:#f8f9fc;
+  padding: 5px 10px;
+  border-bottom: 1px solid #e8ebf6;
+  margin: 0px;
+}
+@media (max-width:450px) {
+  .App{
+    flex-direction: column;
+    justify-content: center;
+  }
+  .chart{
+    flex-direction: column;
+  }
+  .chart1>canvas {
+    width: 100% !important;
+    height: 100% !important;
+  }
+  .chart1{
+    margin-bottom: 2rem;
+  }
+
 }
